test/TestPhases/typechecker/invalid/floatmod.blc
module


activity empty ()()
    var x: float64 = 15.0
    x = x % 3.0
    await false;
end
